<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:backgroundTint="@color/background_color"
    android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtViewQlsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/qlsv"
        android:textColor="#06111C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintBottom_toTopOf="@id/linear1">

    </TextView>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtViewQlsv">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textColor="#06111C"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/edTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:textColor="#06111C"
            android:textStyle="bold">

        </EditText>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <TextView
            android:id="@+id/txtID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/maSv"
            android:textColor="#06111C"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/edTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:textColor="#06111C"
            android:textStyle="bold">
        </EditText>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/txtGioiTinh"
            android:textColor="#06111C"
            android:textSize="15sp"
            android:textStyle="bold">
        </TextView>


        <RadioGroup
            android:id="@+id/radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/radioBtnMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:checked="true"
                android:text="@string/Nam"
                android:textColor="#06111C"
                android:textStyle="bold">
            </RadioButton>

            <RadioButton
                android:id="@+id/radioBtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/Nu"
                android:textColor="#06111C"
                android:textStyle="bold">
            </RadioButton>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear3">

        <Button
            android:id="@+id/btnAddPle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:background="#43BDBDBD"
            android:text="@string/add"
            android:textColor="#06111C"
            android:textStyle="bold">
        </Button>

        <Button
            android:id="@+id/btnUpdatePle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="#5ABDBDBD"
            android:enabled="false"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textStyle="bold">
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/txtListSt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/listSt"
        android:textColor="#06111C"
        android:textSize="15sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear4">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtListSt">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:text="@string/createBy"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/search"
        app:closeIcon="@drawable/delete"
        app:searchIcon="@android:drawable/ic_menu_search"


        app:iconifiedByDefault="false"
        app:searchHintIcon="@null"
        android:focusable="false"
        app:queryHint="@string/search"

        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtViewQlsv">

    </androidx.appcompat.widget.SearchView>


</androidx.constraintlayout.widget.ConstraintLayout>